--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -31,31 +31,13 @@
 
       <ion-card-content>
 
-
-        <ion-item  *ngFor="let act of accounts" [routerLink]="['./', act.id]">
-
-          <ion-label>{{ act.name}} <br />
-            {{ act.dateAdmitted}}<br />
-            {{ act.room}}</ion-label>
-          
-        </ion-item>
-        <!--app-inpatients *ngFor="let act of accounts"  
-        [accountItem]="act">
-
-        </app-inpatients-->
-
-
-        <!--ion-list>
-          <app-recipe-item 
-            *ngFor="let recipe of recipes" 
-            [recipeItem]="recipe">
-           </app-recipe-item>
-
-
-           
-        </ion-list-->
-
-
+        <ion-card-header>
+         CHH 
+        </ion-card-header>
+        <ion-card-content>
+          Your card info content here
+        </ion-card-content>
+        
 
 
 
