--- a/src/app/components/slides/slides.component.html
+++ b/src/app/components/slides/slides.component.html
@@ -2,14 +2,16 @@
     <ion-row>
       <ion-col size-lg="6" size-md="6" offset-md="3 " size-sm="6" size="12" >
         <ion-slides pager>
-          <ion-slide style="background-color: red;">
-            <p>This is slide 1111</p>
+          <ion-slide style="">
+            <app-logo></app-logo>
+            <h1>Welcome to</h1>
+            <h2>Chong Hua Hospital Doctor's Portal</h2>
           </ion-slide>
           <ion-slide>
-            <p>This is slide 2</p>
+            <p>Some info here</p>
           </ion-slide>
           <ion-slide>
-            <p>This is slide 3</p>
+            <p>Some info here</p>
           </ion-slide>
         </ion-slides>
       </ion-col>
