--- a/src/app/components/slides/slides.component.scss
+++ b/src/app/components/slides/slides.component.scss
@@ -1,11 +1,11 @@
 ion-slide {
-    padding: 160px 20px 160px 20px;
+    padding: 5%;
     display: block;
     img {
-    width: 100px;
+        width: 100px;
     }
     h2 {
-    font-size: 36px;
-    font-weight: bold;
+        font-size: 36px;
+        font-weight: bold;
     }
-    }
+}
