--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -7,7 +7,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col size-md="6" offset-md="3">
+      <ion-col size-md="4" offset-md="4">
           <ion-card>
               <ion-card-content paddung="true">  
                 <div class="center">
@@ -23,7 +23,7 @@
                       <ion-input type="password" id="input-password" [(ngModel)]="postData.password"></ion-input>
                   </ion-item>
                   <div class="ion-margin-vertical ion-text-right">
-                      <ion-button id="btn-confirm" (click)="loginAction() ">
+                      <ion-button id="btn-confirm" (click)="loginAction() " color="mango">
                         Login
                       </ion-button>
                   </div>
