--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,33 @@
 
 
+<ion-header [translucent]="true" mode="md" class="ion-no-border">
+  <div *ngIf="!isDesktop">
+    <ion-toolbar  color="mango" >
+      <ion-title>
+        <ion-icon name="man-outline"></ion-icon> Appointments
+      </ion-title>
+    </ion-toolbar>
+  </div>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3" class="custom-border-bottom">
+        
+        <app-hospital (hospital)="locationAction($event)" ></app-hospital>
+        <app-dateselector [passedDate]="selectedDate" (dateSelector)="dateChanged($event)"></app-dateselector>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      <ion-icon name="man-outline"></ion-icon> Appointments
-    </ion-title>
-  </ion-toolbar>
 </ion-header>
 
+
+
+
+
+
+
 <ion-content [fullscreen]="true">
-  <app-hospital (hospital)="locationAction($event)"></app-hospital>
-  <app-dateselector [passedDate]="selectedDate" (dateSelector)="dateChanged($event)"></app-dateselector>
+
   <!--ion-segment   value="chhc">
     <ion-segment-button value="chhc" (click)="locationAction('C') ">Cebu City</ion-segment-button>
     <ion-segment-button value="chhm" (click)="locationAction('M') ">Mandaue City</ion-segment-button>
@@ -25,6 +41,9 @@
   </div-->
 <!--app-hospitals (hospitals)="hospitals($event)"></app-hospitals>
 <app-hospital (hospital)="hospital($event)"></app-hospital-->
+  <ion-grid>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3">
   <div *ngFor="let x of jsonObj5">
       <div *ngFor="let y of x.data">
         <div *ngIf="y.appt_id != '0';else noReservation" >
@@ -51,6 +70,9 @@
       </ion-card>
     </ng-template>
   </div>
+  </ion-col>
+  </ion-row>
+  </ion-grid>
 
 
 
