--- a/src/global.scss
+++ b/src/global.scss
@@ -24,6 +24,7 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+/*
 .my-custom-modal-css .modal-wrapper {
     height: 30%;
     width: 90%;
@@ -31,3 +32,41 @@
     position: absolute; 
     display: block;  
  }
+*/
+ .my-custom-modal-inpatient-css .modal-wrapper {
+    height: 80%;
+    width: 90%;
+    top: 15;
+    position: absolute; 
+    display: block;  
+ }
+
+
+ .my-custom-modal-css .modal-wrapper {
+   height: 45%;
+   width: 95%;
+   top: 5%;
+   position: absolute; 
+   display: block;  
+}
+
+ion-popover{
+   ion-backdrop{
+   opacity: 0.5 !important;
+   }
+   .popover-wrapper{
+   .popover-content{
+   width:80vw;
+   max-width:500px;
+   }
+   }
+   }
+
+.custom-border-top{
+   border-top: 1px solid #275228 !important;
+}
+.custom-border-bottom{
+   border-bottom: 1px solid rgb(39, 82, 40, 0.3) !important;
+
+}
+   
