--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,8 +74,34 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+
+  --ion-color-mango: #275228;
+  --ion-color-mango-rgb: 255,204,102;
+  --ion-color-mango-contrast: #ffffff;
+  --ion-color-mango-contrast-rgb: 0,0,0;
+  --ion-color-mango-shade: #5d7c5d;
+  --ion-color-mango-tint: #275228;
+  ion-tab-button.tab-selected {
+    ion-icon, ion-label {
+    color: var(--ion-color-mango) !important;
+    --ion-color-base: var(--ion-color-mango) !important;
+    }
+    }
+}
+.ion-color-mango {
+  --ion-color-base: var(--ion-color-mango);
+  --ion-color-base-rgb: var(--ion-color-mango-rgb);
+  --ion-color-contrast: var(--ion-color-mango-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-mango-contrast-rgb);
+  --ion-color-shade: var(--ion-color-mango-shade);
+  --ion-color-tint: var(--ion-color-mango-tint);
 }
 
+.toolbar-ios, .toolbar-md, .toolbar-wp
+{
+min-height: 20px;
+}
 @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
@@ -230,3 +256,5 @@
 .center{
   text-align:center;
 }
+
+
