--- a/src/app/components/hospital/hospital.component.html
+++ b/src/app/components/hospital/hospital.component.html
@@ -1,7 +1,7 @@
 
 
 
-<ion-segment   value="chhc"  color="mango">
-  <ion-segment-button value="chhc" (click)="onSubmit('C') ">Cebu City</ion-segment-button>
+<ion-segment   value="chhc"  mode="ios">
+  <ion-segment-button value="chhc" (click)="onSubmit('C') " >Cebu City</ion-segment-button>
   <ion-segment-button value="chhm" (click)="onSubmit('M') ">Mandaue City</ion-segment-button>
 </ion-segment>
