--- a/src/app/components/inpatientmodal/inpatientmodal.page.html
+++ b/src/app/components/inpatientmodal/inpatientmodal.page.html
@@ -29,7 +29,8 @@
     Location : {{data.site}}<br />
     Room No. : {{data.room_no}}<br />
     Doctor's Fee :  {{data.doctor_prof_fee}}<br />
-    <ion-button color="primary" (click)='detail(data.admission_no)'  (professionalFee)="dateChanged($event)">Fee</ion-button>
+    <ion-button color="mango" (click)='detail(data.admission_no)'  >
+      Doctors Fee</ion-button>
 
   </ion-card-content>
 </ion-card>
