--- a/src/app/components/patientdetailss/patientdetails.page.html
+++ b/src/app/components/patientdetailss/patientdetails.page.html
@@ -1,15 +1,17 @@
-<!--ion-header>
-  <ion-toolbar>
-    <ion-title>modalpage</ion-title>
+<ion-header translucent="" role="banner" class="ios header-ios header-translucent header-collapse-none header-translucent-ios hydrated"><!----><div class="header-background"></div>
+  <ion-toolbar class="in-toolbar ios toolbar-title-default hydrated" color="mango">
+    <ion-title class="ios title-default hydrated">Patient Detail</ion-title>
+    <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
+      <ion-button (click)="ClosePopover()" class="ios button button-clear ion-activatable ion-focusable hydrated">Close</ion-button>
+    </ion-buttons>
   </ion-toolbar>
-</ion-header-->
+</ion-header>
 
 <ion-content>
 
+
   <div *ngFor="let x of cardData">
-    <div class="ion-text-right">
-      <ion-icon name="close-outline"  (click)="closeModal()" ></ion-icon>
-    </div>
+ 
     <ion-card-header>
       <ion-card-title>{{ x.last_name }}, {{x.first_name}}</ion-card-title>
     </ion-card-header>
