--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,23 +1,38 @@
 
 
-<ion-header [translucent]="true" mode="md" class="ion-no-border">
+<ion-header mode="md" class="ion-no-border">
   <div *ngIf="!isDesktop">
+    <ion-content>
+      <ion-fab vertical="top" horizontal="end" slot="fixed" color="mango">
+        <ion-fab-button  routerLink='/addappointmentsmodal'>
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+      </ion-fab>
+    </ion-content>
     <ion-toolbar  color="mango" >
       <ion-title>
         <ion-icon name="man-outline"></ion-icon> Appointments
       </ion-title>
     </ion-toolbar>
+
+    
   </div>
-  <ion-grid>
-    <ion-row>
-      <ion-col size-md="6" offset-md="3" class="custom-border-bottom">
+  
+  <ion-grid 	style="background:white;">
+    <ion-row >
+      <ion-col size-md="6" offset-md="3" size-sm="6"  > 
         
-        <app-hospital (hospital)="locationAction($event)" ></app-hospital>
-        <app-dateselector [passedDate]="selectedDate" (dateSelector)="dateChanged($event)"></app-dateselector>
+        <ion-toolbar  class="ion-no-border" >
+          <app-hospital (hospital)="locationAction($event)" ></app-hospital>
+          <app-dateselector [passedDate]="selectedDate" (dateSelector)="dateChanged($event)"></app-dateselector>
+      </ion-toolbar>
       </ion-col>
     </ion-row>
   </ion-grid>
 
+ 
+  
+  
 </ion-header>
 
 
@@ -27,6 +42,19 @@
 
 
 <ion-content [fullscreen]="true">
+
+
+
+
+
+  <!-- fab placed to the bottom end -->
+
+
+
+
+
+
+
 
   <!--ion-segment   value="chhc">
     <ion-segment-button value="chhc" (click)="locationAction('C') ">Cebu City</ion-segment-button>
@@ -44,31 +72,47 @@
   <ion-grid>
     <ion-row>
       <ion-col size-md="6" offset-md="3">
+
+
+      
+      
+        <!--ion-list-header class="ios hydrated">Patient List</ion-list-header-->
   <div *ngFor="let x of jsonObj5">
       <div *ngFor="let y of x.data">
-        <div *ngIf="y.appt_id != '0';else noReservation" >
-        <ion-card>
+        <ion-list class="ios list-ios hydrated">
+          <ion-item class="item ios in-list ion-focusable item-label hydrated" (click)='presentActionSheet(y.appt_id)'>
+            <ion-avatar slot="start" class="ios hydrated">
+              <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+            </ion-avatar>
+            <ion-label class="sc-ion-label-ios-h sc-ion-label-ios-s ios hydrated">
+              <h3>{{y.patientName}}</h3>
+              <p>{{y.time}}</p>
+              <div [ngSwitch]="y.status">
+                <ion-badge color="success" *ngSwitchCase="'Complete'">{{y.status}}</ion-badge>
+                <ion-badge color="secondary" *ngSwitchCase="'Serving'">{{y.status}}</ion-badge>
+                <ion-badge color="warning" *ngSwitchCase="'Reserved'">{{y.status}}</ion-badge>
+                <li *ngSwitchDefault>{{y.status}}</li>
+              </div>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      
+        <!--ion-card class="ion-activatable" (click)='presentModal(y.appt_id)'>
           <ion-card-header>
             <ion-card-title>{{y.patientName}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             {{y.time}}<br />
-            <ng-template [ngIf]="y.status== 'Complete'"  [ngIfElse]="Reserved">
-              <ion-button color='success' size="small"   ng-disabled="all"   fill="outline" slot="start">{{y.status}}</ion-button>
-            </ng-template>
-            <ng-template #Reserved>
-              <ion-button color='warning' size="small"   ng-disabled="all"  fill="outline" slot="start">{{y.status}}</ion-button>
-            </ng-template>
-            <ion-button  class="ion-text-right" size="small" slot="end"  (click)="presentModal(y.appt_id)" >details</ion-button>
+            <div [ngSwitch]="y.status">
+              <ion-badge color="success" *ngSwitchCase="'Complete'">{{y.status}}</ion-badge>
+              <ion-badge color="secondary" *ngSwitchCase="'Serving'">{{y.status}}</ion-badge>
+              <ion-badge color="warning" *ngSwitchCase="'Reserved'">{{y.status}}</ion-badge>
+              <li *ngSwitchDefault>{{y.status}}</li>
+            </div>
           </ion-card-content>
-        </ion-card>
+        </ion-card-->
       </div>
-      </div>
-    <ng-template #noReservation>
-      <ion-card>
-        <ion-card-title>No Reservation</ion-card-title>
-      </ion-card>
-    </ng-template>
+
   </div>
   </ion-col>
   </ion-row>
