--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -12,7 +12,7 @@
               <ion-card-content paddung="true">  
                 <div class="center">
                   <app-logo></app-logo>
-                  <h1>Doctors Portal - Login</h1>
+                  <h1>Doctor's Portal - Login</h1>
                 </div>
                   <ion-item>
                       <ion-label position="floating">Username</ion-label>
