--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -39,13 +39,13 @@
 <ion-grid>
   <ion-row>
     <ion-col size-md="6" offset-md="3">
-
+      This service is currently in development
   <div [ngSwitch]="segment">
 
     <div *ngSwitchCase="'all'">
       <div  *ngFor="let x of inPatients">
         
-      <ion-card class="ion-activatable" (click)='detail(x)'> 
+      <!--ion-card class="ion-activatable" (click)='detail(x)'> 
         <ion-card-header>
           <ion-card-title>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</ion-card-title>
         </ion-card-header>
@@ -61,7 +61,39 @@
         </div>      
         </ion-card-content>
         
-      </ion-card>
+      </ion-card-->
+
+
+
+
+      <ion-list class="ios list-ios hydrated ion-activatable ripple-parent" (click)='detail(x)'>
+        <ion-item class="item ios in-list ion-focusable item-label hydrated " >
+          <ion-avatar slot="start" class="ios hydrated">
+            <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+          </ion-avatar>
+          <ion-label class="sc-ion-label-ios-h sc-ion-label-ios-s ios hydrated">
+            <h3><b>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</b></h3>
+            <div *ngIf="x.site == 'C'">
+              Chong Hua Hospital (Cebu City)<br />
+              Room {{x.room_no}}<br />
+              {{x.admission_status}}
+            </div>
+            <div *ngIf="x.site == 'M'">
+             Chong Hua Hospital Mandaue<br />
+             Room {{x.room_no}}
+           </div> 
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    
+
+
+
+
+
+
+
+
     </div>
     </div>
 
@@ -69,7 +101,8 @@
     <div *ngSwitchCase="'chhc'" >
       <div  *ngFor="let x of inPatients">
         <div *ngIf="x.site == 'C'" >
-        <ion-card class="ion-activatable" (click)='detail(x)'>
+
+        <!--ion-card class="ion-activatable" (click)='detail(x)'>
           <ion-card-header>
             <ion-card-title>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</ion-card-title>
           </ion-card-header>
@@ -83,7 +116,36 @@
             Room {{x.room_no}}
           </div>      
           </ion-card-content>
-        </ion-card>
+        </ion-card-->
+        <ion-list class="ios list-ios hydrated ion-activatable">
+          <ion-item class="item ios in-list ion-focusable item-label hydrated" (click)='detail(x)'>
+            <ion-avatar slot="start" class="ios hydrated">
+              <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+            </ion-avatar>
+            <ion-label class="sc-ion-label-ios-h sc-ion-label-ios-s ios hydrated">
+              <h3><b>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</b></h3>
+              <div *ngIf="x.site == 'C'">
+                Chong Hua Hospital (Cebu City)<br />
+                Room {{x.room_no}}<br />
+                {{x.admission_status}}
+              </div>
+              <div *ngIf="x.site == 'M'">
+               Chong Hua Hospital Mandaue<br />
+               Room {{x.room_no}}
+             </div> 
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      
+
+
+
+
+
+
+
+
+        
       </div>
       </div>
     </div>
@@ -92,7 +154,8 @@
     <div *ngSwitchCase="'chhm'" >
       <div  *ngFor="let x of inPatients">
         <div *ngIf="x.site == 'M'" >
-        <ion-card class="ion-activatable" (click)='detail(x)'>
+         
+        <!--ion-card class="ion-activatable" (click)='detail(x)'>
           <ion-card-header>
             <ion-card-title>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</ion-card-title>
           </ion-card-header>
@@ -106,7 +169,34 @@
             Room {{x.room_no}}
           </div>      
           </ion-card-content>
-        </ion-card>
+        </ion-card-->
+
+
+
+        <ion-list class="ios list-ios hydrated ion-activatable ripple-parent" (click)='detail(x)'>
+          <ion-item class="item ios in-list ion-focusable item-label hydrated " >
+            <ion-avatar slot="start" class="ios hydrated">
+              <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+            </ion-avatar>
+            <ion-label class="sc-ion-label-ios-h sc-ion-label-ios-s ios hydrated">
+              <h3><b>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</b></h3>
+              <div *ngIf="x.site == 'C'">
+                Chong Hua Hospital (Cebu City)<br />
+                Room {{x.room_no}}<br />
+                {{x.admission_status}}
+              </div>
+              <div *ngIf="x.site == 'M'">
+               Chong Hua Hospital Mandaue<br />
+               Room {{x.room_no}}
+             </div> 
+            </ion-label>
+          </ion-item>
+        </ion-list>
+
+
+
+
+
       </div>
       </div>
     </div>
