--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,49 @@
-ion-row{ ion-card{ width:100% !important; margin-left: 0 !important; margin-right: 0 !important; img{ width:100%; } } }
+/*ion-row{ 
+    ion-card{ 
+        width:100% !important; margin-left: 0 !important; margin-right: 0 !important; img{ width:100%; } } }
+
+
+
+.demo-main-cont.demo-comp-listview { padding: 0; }
+.demo-comp-listview .demo-note { margin: 10px; }
+
+.md-custom-listview .mbsc-lv-item {
+    background: #c3e8fb;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.md-custom-listview .md-star-icon {
+    float: right;
+    font-weight: bold;
+    color: #ff8400;
+}
+
+.md-custom-listview .md-star-icon:before {
+    margin-right: 5px;
+}*/
+
+.Complete {
+    display: inline-block;
+    width: 0%;
+    height: 1em;
+    border-left: 3px solid  #2dd36f;
+    //border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  }
+  .Reserved {
+    display: inline-block;
+    width: 0%;
+    height: 1em;
+    border-left: 3px solid  #ffc409;
+    //border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  }
+  .Serving {
+    display: inline-block;
+    width: 0%;
+    height: 1em; 
+    border-left: 3px solid  #3dc2ff;
+   // border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  }
+.linesBelow{
+  border-bottom: 3px solid  rgba(0, 0, 0,0.3);
+}
