--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,5 +1,22 @@
 
-<ion-content [fullscreen]="true">
+<ion-header mode="md" class="ion-no-border">
+  <div *ngIf="!isDesktop">
+    <ion-toolbar  color="mango" >
+      <ion-title>
+        <ion-icon name="man-outline"></ion-icon> Settings
+      </ion-title>
+      <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated" >
+        <ion-button (click)="logout()" class="ios button button-clear ion-activatable ion-focusable hydrated">Log out&nbsp; <ion-icon name="power-outline"></ion-icon></ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+
+    
+  </div>
+  
+
+  
+  
+</ion-header>
   <!--ion-header [translucent]="true">
     <ion-toolbar color="mango">
       <ion-title>
@@ -14,24 +31,45 @@
   </ion-header-->
   
 
-  <ion-header translucent="" role="banner" class="ios header-ios header-translucent header-collapse-none header-translucent-ios hydrated"><!----><div class="header-background"></div>
-    <ion-toolbar class="in-toolbar ios toolbar-title-default hydrated"  color="mango">
-      <ion-title class="ios title-default hydrated">Settings</ion-title>
-      <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated" >
-        <ion-button (click)="logout()" class="ios button button-clear ion-activatable ion-focusable hydrated">Log out&nbsp; <ion-icon name="power-outline"></ion-icon></ion-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
 
 
-  
+  <ion-content [fullscreen]="true">
+
+    <ion-refresher slot="fixed" id="refresher" class="md refresher-md hydrated refresher-native">
+      <ion-refresher-content class="md hydrated">
+        <div class="refresher-pulling">
+          <div class="refresher-pulling-icon" style="--ion-pulling-refresher-translate:80.7407px;">
+            <div class="spinner-arrow-container">
+              <ion-spinner class="md spinner-circular spinner-paused hydrated" role="progressbar" style="animation-duration: 1400ms;">
+              </ion-spinner>
+              <div class="arrow-container">
+                <ion-icon role="img" class="md hydrated" aria-label="caret back sharp"></ion-icon></div>
+              </div>
+            </div>
+          </div>
+          <div class="refresher-refreshing">
+            <div class="refresher-refreshing-icon">
+              <ion-spinner class="md spinner-circular hydrated" role="progressbar" style="animation-duration: 1400ms; animation-delay: -655ms;">
+              </ion-spinner>
+            </div>
+          </div>
+        </ion-refresher-content>
+    </ion-refresher>
+
+
+
+
+
+
+
+
   <ion-grid>
     <ion-row>
       <ion-col size-md="6" offset-md="3">
 
-  <ion-card *ngFor="let x of displayUserData">
+  <ion-card >
 
-      <ion-card-header><p>{{ x.first_name }} {{ x.last_name }}</ion-card-header>
+      <ion-card-header><p>{{ displayUserData.first_name }} {{ displayUserData.last_name }}</ion-card-header>
       
       <ion-item>
         <ion-button fill="solid">Change Password</ion-button>
