--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -114,7 +114,8 @@
         <ion-item class=" ion-activatable" (click)='presentActionSheet(y.appt_id,y.status,y.patientName)'  >
 
           <ion-avatar slot="start" class="md hydrated" >
-            <img src="../../assets/avatar.svg">
+            <!--img src="../../assets/avatar.svg"-->
+            <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
           </ion-avatar>
           <ion-label >
             <h3>{{y.patientName}}</h3>
